--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "simple application to track invoices",
   "main": "app/index.js",
   "scripts": {
+    "build:server": "babel ./app/server -d build/server",
+    "build:watch:server": "babel ./app/server -d build/server --watch",
+    "build:client": "webpack --config ./webpack.config.js/",
+    "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
+    "build:prod": "npm run build:server && npm run build:client",
+    "start": "npm run build:prod && NODE_ENV=production node ./build/server/index.js",
+    "start:dev": "parallelshell 'npm run build:watch:server' 'npm run build:watch:client' 'nodemon ./build/server/index.js'",
+    "start:dev:client": "webpack-dev-server",
     "test": "test"
   },
   "repository": {
@@ -17,6 +25,7 @@
   },
   "homepage": "https://github.com/bbchoe/hrsf83-mvp#readme",
   "dependencies": {
+    "express": "^4.16.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0"
   },
@@ -27,6 +36,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.8.1"
+    "nodemon": "^1.12.1",
+    "parallelshell": "^3.0.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
