--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0"
+    "react-dom": "^16.1.0",
+    "style-loader": "^0.19.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -35,6 +36,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.12.1",
     "parallelshell": "^3.0.2",
