--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/bbchoe/hrsf83-mvp#readme",
   "dependencies": {
+    "axios": "^0.17.0",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
@@ -39,6 +41,8 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
+    "mongoose": "^4.13.1",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "parallelshell": "^3.0.2",
     "webpack": "^3.8.1",
